# amorphouspy

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  codecov.yml  environment.yml  generate_logo.py  mkdocs.yml  pixi.toml  pyproject.toml  requirements.txt
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: good_first_issue.yml
.github/workflows/: amorphouspy.yml  amorphouspy_api.yml  amorphouspy_integration.yml  amorphouspy_notebooks.yml  deploy-docs.yml  deploy_docs.yml  pipeline.yml  publish_pypi.yml  pyiron_glass.yml  pyiron_glass_api.yml  pyiron_glass_integration.yml  release-drafter.yml  repo.yml  test_docs.yml  test_package.yml  update-lock.yml  version-bump.yml
amorphouspy/: pyproject.toml
amorphouspy/src/amorphouspy/: __init__.py  io_utils.py  mass.py  neighbors.py  shared.py  structure.py
amorphouspy/src/amorphouspy/analysis/: __init__.py  bond_angle_distribution.py  cavities.py  cte.py  qn_network_connectivity.py  radial_distribution_functions.py  rings.py  structure_factor.py
amorphouspy/src/amorphouspy/potentials/: __init__.py  _config.py  bjp_potential.py  du_teter_potential.py  pmmcs_potential.py  potential.py  shik_potential.py
amorphouspy/src/amorphouspy/structure/: __init__.py  composition.py  density.py  geometry.py  planner.py
amorphouspy/src/amorphouspy/workflows/: __init__.py  cte.py  cte_helpers.py  elastic_mod.py  md.py  meltquench.py  meltquench_protocols.py  parametric.py  shared.py  structural_analysis.py  viscosity.py
amorphouspy/src/tests/: __init__.py  test_bond_angle.py  test_cavities.py  test_charge_neutrality.py  test_cte.py  test_cte_helpers.py  test_density_model.py  test_elastic_pure.py  test_io_utils.py  test_lammps_error_capture.py  test_mass.py  test_meltquench_protocols.py  test_neighbors.py  test_parametric.py  test_potentials.py  test_rdf.py  test_rings.py  test_shared.py  test_shik.py  test_structure.py  test_structure_analysis.py  test_structure_extended.py  test_structure_factor.py  test_structure_pure.py  test_viscosity_module.py  test_viscosity_pure.py  test_viscosity_simulation.py  test_workflows_structural_analysis.py
amorphouspy/src/tests/data/: 20Na2O-10B2O3-70SiO2.dump
amorphouspy_api/: .gitignore  README.md  conftest.py  pyproject.toml
amorphouspy_api/src/amorphouspy_api/: __init__.py  app.py  auth.py  composition.py  config.py  database.py  executor.py  jobs.py  mcp_server.py  models.py  visualization.py  worker.py
amorphouspy_api/src/amorphouspy_api/routers/: __init__.py  glasses.py  jobs.py  jobs_helpers.py  meltquench.py  visualization.py
amorphouspy_api/src/amorphouspy_api/static/css/: results.css
amorphouspy_api/src/amorphouspy_api/static/js/: results.js
amorphouspy_api/src/amorphouspy_api/templates/: results.html
amorphouspy_api/src/amorphouspy_api/workflows/: __init__.py  meltquench.py  simulation.py  viscosity.py
amorphouspy_api/src/amorphouspy_api/workflows/analyses/: __init__.py  cte.py  elastic.py  meltquench_viz.py  structure.py  viscosity.py
amorphouspy_api/src/tests/: __init__.py  test_auth.py  test_composition.py  test_database.py  test_hash_caching.py  test_jobs.py  test_mcp.py  test_meltquench.py  test_meltquench_integration.py
amorphouspy_api/system-service/: README.md  amorphouspy-api.path  amorphouspy-api.service
data/: 20Na2O-80SiO2.dump
deprecated/pureLAMMPS/: GlassMaking.ipynb
deprecated/pyiron/: Meltquench.ipynb  random_atoms.data
docs/: api_reference.md  api_service.md  export_openapi.py  index.md  installation.md  structure.md  tutorial.md
docs/analysis/: qn.md
docs/developers/: api_design.md  architecture.md  contributing.md  good_first_issue.md
docs/how_to_guides/: index.md  installation.md  running_api.md
docs/javascripts/: mathjax.js
docs/notebooks/: CTE.ipynb  ElasticProperties.ipynb  MDTutorial.ipynb  Meltquench.ipynb  MeltquenchTutorial.ipynb  Meltquench_BJP.ipynb  Meltquench_PMMCS.ipynb  StructureAnalysis.ipynb  StructureTutorial.ipynb  Viscosity.ipynb  ViscosityTutorial.ipynb
docs/potentials/: bjp.md  index.md
docs/stylesheets/: extra.css
docs/system-service/: amorphouspy-api.service
docs/theory/: index.md  structure.md
docs/workflows/: cte.md  index.md
notebooks/: .gitignore  CTE.ipynb  ElasticProperties.ipynb  MDTutorial.ipynb  Meltquench.ipynb  MeltquenchTutorial.ipynb  Meltquench_BJP.ipynb  Meltquench_PMMCS.ipynb  Meltquench_SHIK.ipynb  StructureAnalysis.ipynb  Viscosity.ipynb  ViscosityTutorial.ipynb  meltquench_Structure_analysis.ipynb
notebooks/data/: CTE_fluctuations_150ps_production_runs.json  CTE_fluctuations_200ps_production_runs.json  CTE_fluctuations_50ps_production_runs.json  CTE_temperature_scan_run1.json  CTE_temperature_scan_run4.json  CTE_temperature_scan_run5.json  CTE_temperature_scan_run6.json  SiO2_glass_300_atoms.xyz  quenched_Al-Ca-O-Si_glass_3x3x3.data
pureLAMMPS/: GlassMaking.ipynb
pyiron/: Meltquench.ipynb
pyiron_glasagent/: pyproject.toml
pyiron_glasagent/src/pyiron_glasagent/: __init__.py  meltquench.py  potential.py  structure.py
pyiron_glass/: pyproject.toml  requirements-dev.txt
pyiron_glass/src/pyiron_glass/: __init__.py  io_utils.py  mass.py  meltquench.py  neighbors.py  potential.py  shared.py  structure.py  structure_analysis.py
pyiron_glass/src/pyiron_glass/analysis/: __init__.py  bond_angle_distribution.py  cavities.py  cte.py  qn_network_connectivity.py  radial_distribution_functions.py  rings.py  structure_analysis.py
pyiron_glass/src/pyiron_glass/potentials/: __init__.py  bjp_potential.py  pmmcs_potential.py  potential.py  shik_potential.py
pyiron_glass/src/pyiron_glass/workflows/: __init__.py  cte.py  elastic_mod.py  md.py  meltquench.py  meltquench_protocols.py  shared.py  structural_analysis.py  viscosity.py
pyiron_glass/src/tests/: __init__.py  test_charge_neutrality.py  test_density_model.py  test_mass.py  test_meltquench_protocols.py  test_shik.py  test_structure.py  test_structure_analysis.py  test_viscosity_module.py
pyiron_glass_api/: .gitignore  README.md  pyproject.toml
site/: 404.html  index.html
(+108 files in other folders)
