[build-system]
requires = ["hatchling>=1.21", "editables"]
build-backend = "hatchling.build"

[project]
name = "amorphouspy"
version = "0.2.0"
description = "Workflows for atomistic modeling of oxide glasses"
authors = [
  { name = "Achraf Atila", email = "achraf.atila@bam.de" },
  { name = "Marcel Sadowski", email = "marcel.sadowski@schott.com" },
  { name = "Jan Janssen", email = "janssen@mpie.de" },
  { name = "Leopold Talirz", email = "leopold.talirz@schott.com" },
]
license = { file = "../LICENSE" }
dependencies = [
  "ase",
  "numba",
  "pandas",
  "lammpsparser",
  "pymatgen",
  "scipy",
]

[project.optional-dependencies]
executorlib = ["executorlib"]
sovapy = ["sovapy"]

[tool.pytest]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
# Target Python version
target-version = "py312"
# Line length control
line-length = 120

[tool.ruff.format]           # formatter tweaks
quote-style  = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]             # linter rules
select   = ["ALL"]           # enable every rule Ruff knows
ignore   = [
  "D203",
  "D213", 
  "PLR0913",
  "S101",
  "N802",
  "N803",
  "N806",
  "FBT002",
  "COM812",
]
fixable  = ["ALL"]           # allow --fix to touch everything

[tool.ruff.lint.per-file-ignores]
"src/tests/**" = [
  "PLR2004",  # Magic values are intentional in test assertions
  "ANN",      # Type annotations not required in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.workspace]
members = [
    "amorphouspy",
]
