[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_glasagent"
version = "0.0.1"
description = "pyiron workflows for the glasagent"
authors = [
  { name = "Achraf Atila", email = "achraf.atila@bam.de" },
  { name = "Jan Janssen", email = "janssen@mpie.de" },
]
license = { file = "../LICENSE" }
dependencies = [
  "ase==3.25.0",
  "pandas==2.2.3",
  "pyiron_atomistics==0.7.6",
  "pyiron_base==0.12.0",
  "scipy==1.15.2",
  "structuretoolkit==0.0.32",
]
