[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyiron_glass"
version = "0.0.1"
description = "pyiron workflows atomistic modeling of oxide glasses"
authors = [
  { name = "Achraf Atila", email = "achraf.atila@bam.de" },
  { name = "Jan Janssen", email = "janssen@mpie.de" },
  { name = "Leopold Talirz", email = "leopold.talirz@schott.com" },
]
license = { file = "../LICENSE" }
dependencies = [
  "ase==3.25.0",
  "pandas==2.2.3",
  "pyiron_atomistics==0.7.7",
  "pyiron_base==0.12.0",
  "scipy==1.15.2",
  "structuretoolkit==0.0.32",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
