[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyiron_glass"
version = "0.0.1"
description = "pyiron workflows atomistic modeling of oxide glasses"
authors = [
  { name = "Achraf Atila", email = "achraf.atila@bam.de" },
  { name = "Jan Janssen", email = "janssen@mpie.de" },
  { name = "Leopold Talirz", email = "leopold.talirz@schott.com" },
]
license = { file = "../LICENSE" }
dependencies = [
  "ase",
  "pandas",
  "pyiron_atomistics",
  "pyiron_base",
  "scipy",
  "structuretoolkit",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
