[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyiron_glass"
version = "0.0.7"
description = "pyiron workflows atomistic modeling of oxide glasses"
authors = [
  { name = "Achraf Atila", email = "achraf.atila@bam.de" },
  { name = "Jan Janssen", email = "janssen@mpie.de" },
  { name = "Leopold Talirz", email = "leopold.talirz@schott.com" },
]
license = { file = "../LICENSE" }
dependencies = [
  "ase",
  "pandas",
  "pyiron_atomistics",
  "pyiron_base",
  "scipy",
  "structuretoolkit",
]

[tool.pytest]
testpaths = ["src/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
# Target Python version
target-version = "py312"
# Line length control
line-length = 120

[tool.ruff.format]           # formatter tweaks
quote-style  = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]             # linter rules
select   = ["ALL"]           # enable every rule Ruff knows
ignore   = [
  "D203",
  "D213", 
  "PLR0913",
  "S101",
  "N802",
  "N803",
  "N806",
  "FBT002",
  "COM812",
]
fixable  = ["ALL"]           # allow --fix to touch everything

[tool.uv.workspace]
members = [
    "pyiron_glass",
]
